; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/namespace/extr_nsnames.c_AcpiNsGetExternalPathname.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/namespace/extr_nsnames.c_AcpiNsGetExternalPathname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NsGetExternalPathname = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @AcpiNsGetExternalPathname(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* @NsGetExternalPathname, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @ACPI_FUNCTION_TRACE_PTR(i32 %5, i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @FALSE, align 4
  %10 = call i8* @AcpiNsGetNormalizedPathname(i32* %8, i32 %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @return_PTR(i8* %11)
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32 @ACPI_FUNCTION_TRACE_PTR(i32, i32*) #1

declare dso_local i8* @AcpiNsGetNormalizedPathname(i32*, i32) #1

declare dso_local i32 @return_PTR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
